syntax = "proto3";

import "google/protobuf/any.proto";

service ClaimsSignService {
  rpc ClaimsSign(ClaimsSignRequest) returns (ClaimsSignResponse);
}

message ClaimsSignRequest {
  string usage = 1;
  google.protobuf.Any payload = 2;
}

message ClaimsSignResponse {
  string token = 1;
}
