syntax = "proto3";

import "jwk.proto";

service JwkListService {
  rpc JwkList(JwkListRequest) returns (JwkListResponse);
}

message JwkListRequest {
  string usage = 1;
  bool private = 2;
}

message JwkListResponse {
  repeated Jwk keys = 1;
}
