syntax = "proto3";

service StatusService {
  rpc Status(StatusRequest) returns (StatusResponse);
}

enum DependencyStatus {
  DEPENDENCY_STATUS_UNSPECIFIED = 0;
  DEPENDENCY_STATUS_UP = 1;
  DEPENDENCY_STATUS_DOWN = 2;
}

message DependencyHealth {
  DependencyStatus status = 1;
  string err = 2;
}

message StatusRequest {}

message StatusResponse {
  DependencyHealth postgres = 1;
}
